--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -4,11 +4,6 @@
 		<tr class="row">
 			<td rowspan="9" class="col-md-3 col-xs-12 col-sm-12">
 				<%=@sale_book.cover_image(2)%>
-				<!--
-				<% if @sale_book.status==1%>
-					<%=image_tag asset_path("soldout.png"),style:"position:absolute;z-index:10;top: 74px;left: -43px;width:300px;"%>
-				<% end %>
-				-->
 			</td>
 			<td class="col-md-8 col-md-offset-1">
 				<table class="table">
@@ -34,7 +29,9 @@
 					</tr>
 					<tr class="row">
 						<td class="col-md-2">連絡方式</td>
-						<td><%=@sale_book.contact_way==0 ? @sale_book.user.email : "Facebook" %></td>
+						<td>
+							<%=@sale_book.contact_way==0 ? @sale_book.user.email : link_to("Facebook","https://facebook.com/#{@sale_book.user.uid}") %>
+						</td>
 					</tr>
 					<tr class="row">
 						<td class="col-md-2">
@@ -70,21 +67,25 @@
 			</td>
 		</tr>
 		</table>
+		<% if @book.preview_link.present?||@book.description.present? %>
 		<div class="row" style="margin-top:-65px;">
 			<hr>
-			<div class="col-md-12">
-			<% if @book.preview_link.present? %>
+			<div class="col-md-12">	
 			<h4>
-				<%=link_to "搶先看 ",@book.preview_link,target:"_blank"%><br>
+				<% if @book.preview_link.present? %>
+					<%=link_to "搶先看 ",@book.preview_link,target:"_blank"%>
+				<% end %>
+					<strong>簡介</strong><small>(by GoogleBook)</small>
 			</h4>
-			<% end %>	
-			<h4><strong>簡介</strong><small>(by GoogleBook)</small></h4>
-			<% if @book.description.present? %>
 				<p>
-					<%=@book.description%>
+					<% if @book.description.present? %>
+						<%=@book.description%>
+					<% else %>
+						尚無簡介
+					<% end %>
 				</p>
-			<% end %>
 			</div>
 		</div>
+		<% end %>
 	</div>
 </div>
