fix main index bug

--- a/app/views/courses/search/_xtmpl_results_mini.html.erb
+++ b/app/views/courses/search/_xtmpl_results_mini.html.erb
@@ -30,7 +30,7 @@
 				}		
 				if (from=="cart")
 					$("#shopping_cart_courses").load("/courses/show_cart");
-			<% if current_user.canShare? %>		
+			<% if current_user.try(:canShare?) %>		
 				$('#schedule_table').CourseTable('renderImg', 'upload') ;	
 			<% end %>	
 			}	
