--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -64,7 +64,7 @@
 		<div class="row " style="margin-top:15%;">
 			<div class="container icon-container col-md-offset-3 col-sm-offset-2" >
 				<div class="row row-margin" >
-					<div class="circle clickable-hover" href="/courses/">
+					<div class="circle clickable-hover" href="/books/">
 						<%=fa_icon "book 5x" %>
 					</div>
 				</div>
