fix books js no isbn image

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -80,7 +80,7 @@
 									無
 								<% end %>
 								">
-								<%="#{sale_book.course_teacherships.first.try(:course_ch_name)} #{sale_book.course_teacherships.first.try(:teacher_name)}" %><br>
+								<%="課程:#{sale_book.course_teacherships.first.try(:course_ch_name)} 老師:#{sale_book.course_teacherships.first.try(:teacher_name)}" %><br>
 							</p>
 							
 						</div>
