--- a/app/assets/javascripts/books.js.erb
+++ b/app/assets/javascripts/books.js.erb
@@ -173,9 +173,10 @@ function showIsbnTip(){
 	var tips="<h4>每一本書都有一個專屬的ISBN（國際標準書號。International Standard Book Number，簡稱ISBN）<br>";
 	tips+="通常印製在版權頁及書底商品條碼上方，是國際通用的圖書或獨立的*出版物代碼。基本上就是該出版品的身分證字號。";
 	tips+="<br><br>Q1:為什麼要用ISBN?<br>";
-	tips+="透過ISBN，可以提供更加完整有關書籍的資訊，EX:博客來書店評價、書本簡介...";
+	tips+="透過ISBN，可以提供更加完整有關書籍的資訊，EX:博客來書店評價、Google Book書本簡介...";
 	tips+="<br><br>Q2:我該去哪找ISBN呢?<br>";	
 	tips+="在書籍的條碼區就可以找到囉，如圖</h4>";
-	tips+='<img alt="Isbn" height="200" src="/assets/ISBN.jpg" width="300">';
+	tips+='<%=image_tag asset_path("ISBN.jpg"),size:"300x200"%>';
+	//tips+='<img alt="Isbn" height="200" src="/assets/ISBN.jpg" width="300">';
 	showGlobalModal("ISBN",tips);
 }
