fix author too long

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -67,7 +67,7 @@
 									<%=sale_book.book_name.truncate(15)%>					
 								</strong><br>
 								<strong>
-									作者:<%=sale_book.book.authors%>
+									作者:<%=sale_book.book.authors.truncate(15)%>
 								</strong>
 							</span>
 							
