authors add tip

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -66,7 +66,7 @@
 								<strong data-toggle="tooltip" title="<%=sale_book.book_name%>" >
 									<%=sale_book.book_name.truncate(15)%>					
 								</strong><br>
-								<strong>
+								<strong data-toggle="tooltip" title="<%=sale_book.book.authors%>">
 									作者:<%=sale_book.book.authors.truncate(15)%>
 								</strong>
 							</span>
