--- a/app/views/user/edit.html.erb
+++ b/app/views/user/edit.html.erb
@@ -30,13 +30,13 @@
 		<div class="form-group">
 			<h4><%=label_tag 'Name',"Name",class:"col-sm-2 control-label"%></h4>
 			<div class="col-md-9">
-				<%=f.text_field :name,class:"form-control"%>
+				<%=f.text_field :name, :class=>"form-control", :maxlength=>16 %>
 			</div>
 		</div>
 		<div class="form-group "> 
 			<h4><%=label_tag 'Email',"Email",class:"col-sm-2 control-label" %></h4>
 			<div class="col-md-9">
-				<%=email_field_tag "user[email]",current_user.email.include?("please.change.me") ? "" : current_user.email,class:"form-control",required:"true" %>
+				<%=email_field_tag "user[email]",current_user.email.include?("please.change.me") ? "" : current_user.email, :class=>"form-control", :required=>true, :maxlength=>32 %>
 			</div>
 		</div>
 		<div class="form-group ">
