revise tip text

--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -124,7 +124,7 @@
 				}
 			}
 		});
-		toastr["success"]("已更新暑修課程囉!!!");
+		toastr["success"]("已更新暑修課程囉，請利用進階搜尋查詢~");
 		<% if !current_user %>
 
 		//	toastr["info"]("登入並選擇系級,系統即可為您推薦課程!!");
