fix user uid bug and add admin/user account type

--- a/app/views/admin/_manage_user_lists.html.erb
+++ b/app/views/admin/_manage_user_lists.html.erb
@@ -7,6 +7,15 @@
 			<%=user.student_id||"error"	%>
 		<% end%>	
 	</td>
+	<td>
+	  <% if user.uid and user.student_id %>
+	  E3+FB
+	  <% elsif user.uid %>
+	  FB
+	  <% else %>
+	  E3
+	  <% end %>
+	</td>
 	<% if !user.department.nil? %>
 	<td>
 		<%=user.department_ch_name%>
