--- a/app/views/admin/users.html.erb
+++ b/app/views/admin/users.html.erb
@@ -6,7 +6,8 @@
 	<thead>
 		<tr class="row">
 			<th class="col-md-2">Name</th>
-			<th class="col-md-3">系所</th>
+			<th class="col-md-2">帳號類型</th>
+			<th class="col-md-3">系所</th>		
 			<th class="col-md-1">學分數</th>
 			<th class="col-md-2">課程地圖</th>
 			<th>年級</th>
