--- a/app/views/admin/user_statistics.html.erb
+++ b/app/views/admin/user_statistics.html.erb
@@ -1,12 +1,14 @@
 <%= javascript_include_tag "courses/content", "data-turbolinks-track" => true %>
-
-<div id="container" style="min-width: 310px; height: 400px; max-width: 1000px; margin: 0 auto"></div>
+</br></br>
+<div id="user-type" style="min-width: 310px; height: 400px; max-width: 1000px; margin: 0 auto"></div>
+<hr>
+<div id="user-stat" style="min-width: 310px; height: 400px; max-width: 1000px; margin: 0 auto"></div>
 <hr>
 
 <script>
 
 $(function () {
-  $('#container').highcharts({
+  $('#user-stat').highcharts({
     chart: {
       type: 'column'
     },
@@ -17,7 +19,7 @@ $(function () {
       text: ''
     },
     xAxis: {
-      categories: <%=raw @sta.keys.to_json%>        
+      categories: <%=raw @user_stat.keys.to_json%>        
     },
     yAxis: {
       min: 0,
@@ -41,7 +43,46 @@ $(function () {
     },
     series: [{
       name: '月份',
-      data: <%=raw @sta.values.to_json%>
+      data: <%=raw @user_stat.values.to_json%>
+    }]
+  });
+  
+  $('#user-type').highcharts({
+    chart: {
+      type: 'column'
+    },
+    title: {
+      text: '使用者來源統計'
+    },
+    subtitle: {
+      text: ''
+    },
+    xAxis: {
+      categories: ["E3","FB","E3+FB"]       
+    },
+    yAxis: {
+      min: 0,
+      title: {
+        text: '人數'
+      }
+    },
+    tooltip: {
+      headerFormat: '<span style="font-size:10px">{point.key}</span><table>',
+      pointFormat: '<tr><td style="color:{series.color};padding:0">{series.name}: </td>' +
+        '<td style="padding:0"><b>{point.y} 人</b></td></tr>',
+      footerFormat: '</table>',
+      shared: true,
+      useHTML: true
+    },
+    plotOptions: {
+      column: {
+        pointPadding: 0.2,
+        borderWidth: 0
+      }
+    },
+    series: [{
+      name: '集合',
+      data: <%=@user_type.to_json%>
     }]
   });
 });
