--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -21,7 +21,7 @@
 	<%= search_form_for @q, url:"/books/", class:"form-inline" do |f| %>
 		<div class="row">	
 			<div class="col-md-12 text-center">
-				<%=link_to "我要賣書",new_book_path,class:"btn btn-info",style:"font-size:16px;" %>
+				<%=link_to "新增商品",new_book_path,class:"btn btn-info",style:"font-size:16px;" %>
 				<% if current_user&&current_user.book_trade_infos.count>0 %>
 				<%=link_to "我的商品","/books/?mine=true",class:"btn btn-success",style:"font-size:16px;" %>
 				<% end %>
